<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ErrorConexion">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@id/iv_encabezado_en_dialogo">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@color/morado_yastas"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Title"
            android:text="@string/error_coneccion"/>
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/slowinternet"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingRight="6dp"
            android:paddingLeft="12dp"
            android:textColor="@color/morado_yastas"
            android:text="@string/error_coneccion_explicacion"/>
        <Button
            android:id="@+id/btn_ok_dialogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/aceptar"
            style="@style/BotonDialog"/>
    </LinearLayout>
</RelativeLayout>