<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OlvidoPass">
    <RelativeLayout
        android:id="@+id/rl_contenedor_instrucciones_reseteo"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:padding="6dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explicacion_reseteo"
            android:textColor="@color/morado_yastas"
            android:layout_above="@id/btn_llamar_reseteo"
            android:layout_centerHorizontal="true" />
        <Button
            android:id="@+id/btn_llamar_reseteo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/boton_verde"
            android:text="@string/llamar"
            android:layout_centerInParent="true"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"/>
        <TextView
            android:id="@+id/tv_ya_tengo_codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_llamar_reseteo"
            android:layout_centerHorizontal="true"
            android:textColor="@color/morado_yastas"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ll_contenedor_codigo_temporal_reseteo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_usuario"/>
        <EditText
            android:id="@+id/et_numero_usuario_olvido_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="6"
            android:gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_tarjeta"
            android:layout_marginTop="16dp"/>
        <EditText
            android:id="@+id/et_numero_tarjeta_olvido_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:gravity="center"
            android:maxLength="16"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cual_es_tu_codigo" />
        <EditText
            android:id="@+id/et_meter_codigo_temporal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:gravity="center" />
        <Button
            android:id="@+id/btn_meter_codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/boton_verde"
            android:text="@string/continuar"
            android:layout_centerInParent="true"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_contenedor_reseteo"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/establece_nueva_senna"
            android:layout_above="@+id/et_meter_nuevo_paas"
            android:gravity="center_horizontal"/>
        <EditText
            android:id="@+id/et_meter_nuevo_paas"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:inputType="number"
            android:maxLength="6"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirma_nueva_senna"
            android:gravity="center_horizontal"/>
        <EditText
            android:id="@+id/et_confirma_nuevo_paas"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:inputType="number"
            android:maxLength="6"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"/>
        <Button
            android:id="@+id/btn_resetear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/boton_verde"
            android:text="@string/continuar"
            android:layout_centerInParent="true"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
    <ImageView
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:src="@drawable/logo_principal"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="8dp"/>
    <TextView
        android:id="@+id/tv_version_reseteo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:textSize="14sp"
        android:layout_marginLeft="8dp"
        android:textColor="@color/morado_yastas"/>
    <RelativeLayout
        android:id="@+id/rl_loading_reseteo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:visibility="gone">
        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</RelativeLayout>