<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CuentaClabe">
    <TextView
        android:id="@+id/tv_encabezado_fondear_saldo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:text="@string/tu_clabe"/>

    <RelativeLayout
        android:id="@+id/rl_contenedor_confirmacion_opciones_fondeo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sp_opciones_fondeo"
        android:paddingTop="4dp"
        android:visibility="visible">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_tu_numero_opciones_fondeo"
            android:layout_above="@+id/tv_instrucciones_opciones_fondeo"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_clabe_opciones_fondeo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:gravity="center_horizontal"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/tv_instrucciones_opciones_fondeo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instrucciones_spei"
            android:layout_above="@+id/ll_contenedor_botones_opciones_fondeo"
            android:padding="6dp"/>
        <LinearLayout
            android:id="@+id/ll_contenedor_botones_opciones_fondeo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_margin="6dp"
            android:layout_above="@+id/tv_recordatorio_opciones_fondeo">
            <Button
                android:id="@+id/btn_compartir_clabe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/boton_verde"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="6dp"
                android:text="@string/compartir"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_recordatorio_opciones_fondeo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/recordatorio_spei"
            android:layout_alignParentBottom="true"
            android:padding="6dp"/>
    </RelativeLayout>

</RelativeLayout>